devops/kubernetes/deployment-gateway-api-aws/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-route
  namespace: gwad
spec:
  parentRefs:
    - name: my-app-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-app-service    # Defined in service-deployment-02.yaml
          port: 80
